syntax = "proto3";

package com.cognite.beam.proto;

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message DataSet {
    optional int64 id = 1;
    optional string external_id = 2;
    optional string name = 3;
    optional string description = 4;
    optional bool write_protected = 5;
    optional int64 created_time = 6;
    optional int64 last_updated_time = 7;
    map<string, string> metadata = 8;
}
