syntax = "proto3";

package com.cognite.client.dto;

import "google/protobuf/struct.proto";

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message RawRow {
    string db_name = 1;
    string table_name = 2;
    string key = 3;
    optional int64 last_updated_time = 4;
    google.protobuf.Struct columns = 5;
}

