syntax = "proto3";

package com.cognite.client.dto;

import "asset.proto";
import "event.proto";
import "file.proto";
import "sequence.proto";
import "timeseries.proto";

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message Relationship {
    enum ResourceType {
        ASSET = 0;
        TIME_SERIES = 1;
        FILE = 2;
        EVENT = 3;
        SEQUENCE = 4;
    }

    string external_id = 1;
    optional string source_external_id = 2;
    ResourceType source_type = 3;
    optional string target_external_id = 4;
    ResourceType target_type = 5;
    optional int64 start_time = 6;
    optional int64 end_time = 7;
    optional float confidence = 8;
    optional int64 data_set_id = 9;
    repeated string labels = 10;
    optional int64 created_time = 11;
    optional int64 last_updated_time = 12;

    oneof source {
        Asset source_asset = 13;
        Event source_event = 14;
        TimeseriesMetadata source_timeseries = 15;
        FileMetadata source_file = 16;
        SequenceMetadata source_sequence = 17;
    }
    oneof target {
        Asset target_asset = 18;
        Event target_event = 19;
        TimeseriesMetadata target_timeseries = 20;
        FileMetadata target_file = 21;
        SequenceMetadata target_sequence = 22;
    }
}
