syntax = "proto3";

package com.cognite.client.dto;

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message SecurityCategory {
  optional int64 id = 1;
  string name = 2;
}